--- a/service/build.gradle
+++ b/service/build.gradle
@@ -193,6 +193,8 @@ dependencies {
 
   compile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.14.2-RELEASE'
 
+  compile group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '1.1.1'
+
   compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
   compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
