--- a/ccd-definition/CaseEventToFields/Open/enterApplicant.json
+++ b/ccd-definition/CaseEventToFields/Open/enterApplicant.json
@@ -2,7 +2,7 @@
   {
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
-    "CaseEventID": "enterApplicant",
+    "CaseEventID": "enterApplicant-Open",
     "CaseFieldID": "applicants",
     "PageFieldDisplayOrder": 1,
     "DisplayContext": "OPTIONAL",
@@ -14,7 +14,7 @@
   {
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
-    "CaseEventID": "enterApplicant",
+    "CaseEventID": "enterApplicant-Open",
     "CaseFieldID": "solicitor",
     "PageFieldDisplayOrder": 2,
     "DisplayContext": "OPTIONAL",
