Use new plugin mechanism

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,14 @@
+pluginManagement {
+  repositories {
+    maven {
+      url '../../build/repo'
+    }
+    gradlePluginPortal()
+  }
+}
+
 rootProject.name = 'FPL'
 
 include 'service'
+
 
