--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,13 +1,3 @@
-buildscript {
-  repositories {
-    maven {
-      url '../../../build/repo'
-    }
-  }
-  dependencies {
-    classpath 'ccd-sdk:ccd-gen:0.1.0'
-  }
-}
 
 plugins {
   id 'application'
@@ -18,10 +8,10 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.27.0'
   id 'org.sonarqube' version '2.8'
   id 'project-report'
+  id 'ccd.sdk' version '0.1.0'
 }
 
 
-apply plugin: 'ccd.sdk'
 apply plugin: 'info.solidsoft.pitest'
 apply plugin: 'org.owasp.dependencycheck'
 
