--- a/service/build.gradle
+++ b/service/build.gradle
@@ -8,7 +8,8 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.27.0'
   id 'org.sonarqube' version '2.8'
   id 'project-report'
-  id 'hmcts.ccd.sdk'
+  id 'hmcts.ccd.sdk' version 'DEV-SNAPSHOT'
+
 }
 
 
@@ -170,6 +171,7 @@ sonarqube {
 }
 
 repositories {
+  mavenLocal()
   jcenter()
   maven {
     url "https://dl.bintray.com/hmcts/hmcts-maven"
