--- a/service/build.gradle
+++ b/service/build.gradle
@@ -8,7 +8,7 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.28.0'
   id 'org.sonarqube' version '2.8'
   id 'project-report'
-  id 'hmcts.ccd.sdk'
+  id 'hmcts.ccd.sdk' version '0.8.1'
 }
 
 
@@ -19,8 +19,7 @@ group = 'uk.gov.hmcts.reform'
 version = '1.0.0'
 
 ccd {
-  configDir = file("$rootProject.buildDir/ccd-definition")
-  caseType = 'CARE_SUPERVISION_EPO'
+  configDir = file('../ccd-definition')
 }
 
 sourceSets {
